--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <a href="games" class="btn btn-secondary">Добавить новость</a>
 {% endif %}
 {% for item in games%}
-<div class="col-md6 border rounded">
+<div class="linkblock border rounded" onclick="location.href='/login';">
     <h2>{{item.title}}</h2>
     <div>
         {{item.content}}
