Версия для защиты [pre-relize]

--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div><font size=10>Интернет-магазин приложений MyGame</font></div>
-<div><font size=5>это проект, созданный в рамках образовательного курса
+<div><font size=12>Интернет-магазин приложений MyGame</font></div>
+<div><font size=6>это проект, созданный в рамках образовательного курса
     "Основы промышленного программирования" Лицея Академии Яндекса.</font></div>
-<div><font size=5>Создатели проекта:<br>
-    Климов Фёдор <a href="https://vk.me/id">Написать в VK</a><br>
+<div><font size=8>Создатели проекта:<br>
+    Климов Фёдор <a href="https://vk.me/red0r">Написать в VK</a><br>
     Швецов Егор <a href="https://vk.me/shvetsovegor">Написать в VK</a><br>
-    Скребнев Дмитрий <a href="https://vk.me/id">Написать в VK</a></font></div>
-<div><font size=5>Целью нашего сайта является предоставление начинающим разработчикам
+    Скребнев Дмитрий <a href="https://vk.me/prevlekatelniy_hitriy_evrei">Написать в VK</a></font></div>
+<div><font size=6>Целью нашего сайта является предоставление начинающим разработчикам
     возможности выкладывать свои приложения,
     а остальным пользователям возможности эти приложения покупать.</font></div>
 {% endblock %}
