--- a/templates/error.html
+++ b/templates/error.html
@@ -4,4 +4,7 @@
 <h1>Возникла ошибка</h1>
 
 <img src="static/img/mistake.jpg" alt="альтернативный текст">
+<h3>Проверьте адрес на наличие ошибок, или попытайтесь выполнить запрос чуть позже</h3>
+
+<h3>Если проблема не исчезнет, то обратитесь к администраторам сайта через форму обратной связи в разделе "О проекте"</h3>
 {% endblock %}
